# experiments

./: .gitignore
astar-cpp/: CMakeLists.txt  list.h  main.cpp  math.h  maze.txt  maze2.txt  maze3.txt
basic-game-eng/: CMakeLists.txt  main.cpp
data-structures/: CMakeLists.txt  array.h  binary-tree.h  doubly-linked-list.h  linked-list.h  main.cpp  memory-aid.h  tree.h
first-jni-test/: CMakeLists.txt  Library.cpp  Library.h  Library.java
game-lin-alg/: CMakeLists.txt  galg.h  galg_ops.h  main.cpp
global/: memory-aid.h  rel-paths.h
math-cpp/: CMakeLists.txt  math.h  tests.cpp
text-rendering/: CMakeLists.txt  main.cpp  opengl.h  text_renderer.h
text-rendering/global/glfw/src/: cmake_uninstall.cmake  glfw_config.h
tri-rasterize-cpp/: CMakeLists.txt  main.cpp  math.h
